--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "laravel/laravel_uikit",
+    "name": "isu73/laravel_uikit",
     "type": "project",
     "description": "The Laravel Framework.",
     "keywords": ["framework", "laravel"],
