--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "isu73/laravel_uikit",
     "type": "project",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "description": "Laravel Framework 9.52 with UIkit framework.",
+    "keywords": ["framework", "laravel", "uikit"],
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
